# etl-api-finance

./: .gitignore  README.md  pyproject.toml
.astro/: config.yaml
dbt-project/etl_api_finance/: .gitignore  dbt_project.yml
dbt-project/etl_api_finance/macros/: pivotar_coluna.sql
dbt-project/etl_api_finance/models/marts/clientes/: kpi_clientes.sql
dbt-project/etl_api_finance/models/staging/: sources.yml
dbt-project/etl_api_finance/models/staging/account/: stg_account.sql  stg_accounts.yml
dbt-project/etl_api_finance/models/staging/clientes/: stg_cliente.sql  stg_cliente.yml
dbt-project/etl_api_finance/models/staging/transactions/: stg_account_transactions.sql  stg_transactions.yml
include/extract/: extract_account.py  extract_base.py  extract_client.py
include/load/: load_account.py  load_base.py  load_client.py
include/pipeline/: pipeline_finance.py
